src/test/resources/wacc_examples/invalid/syntaxErr/classes/badlyPlacedClass.wacc
# class placed after function

# Output:
# #empty#

# Program:

begin
  int f() is
      return 42
  end
  class c {
    int t
  }
end
